# base_bot

./: README.md  chatbot.py  create_agent.py  prepare_agentkit.py  pyproject.toml  requirements.txt
contract/: CompanyShipmentTracker.json  LogisticsDataStorage.json  contract.sol  contract_query.py  data_upload.py  query_logistics_data.py  upload_logistics.py
